--- a/sign.html
+++ b/sign.html
@@ -141,7 +141,7 @@
     </center>
         <hr size="2" style="border:2px solid #b600ce50; background-color: #ae00ff50;margin-top:-8px;">
         <center>
-        <form  action="HOMEPAGE.html" method="GET" onsubmit="return fn()">
+        <form  action="index.html" method="GET" onsubmit="return fn()">
         <table cellspacing="42" style="border:4px solid #ffffff30; margin-top: 60px; border-radius: 15px;background-color: rgba(0, 0, 0, 0.2);backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(75%);-webkit-backdrop-filter: blur(20px) saturate(160%) contrast(45%) brightness(75%); width:55%; height: 65%;">
             <tr>
                 <td width="300" height="30px"><label class="label">First Name</label></td>
