--- a/link.html
+++ b/link.html
@@ -55,7 +55,7 @@
             <div class="div"><a href="daydate.html" target="_blank"><i class="material-icons-round" style="font-size: 30px; vertical-align: -1px;">&#xe8b5;</i> Date to Day</a></div>
             <div class="div"><a href="ltodark.html" target="_blank"><i class="material-icons-round" style="font-size: 30px; vertical-align: -1px;">&#xe3a9;</i> Light to Dark</a></div>
             <div class="div"><a href="canvas.html" target="_blank"><i class="material-icons-round" style="font-size: 30px; vertical-align: -1px;">mode_edit_outline</i> Canvas Pad</a></div>
-            <div class="div aa"><a href="HOMEPAGE.html" onclick="return confirm('Warning! This will open a new Launchpad and your previously entered sign-in details will be lost. Press OK to continue | Switch to your existing Launchpad to retain details.');" target="_self"><i class="material-icons-round" style="font-size: 35px; vertical-align: -5px; font-weight: 900;">north_west</i> Back to Launchpad</a></div>
+            <div class="div aa"><a href="index.html" onclick="return confirm('Warning! This will open a new Launchpad and your previously entered sign-in details will be lost. Press OK to continue | Switch to your existing Launchpad to retain details.');" target="_self"><i class="material-icons-round" style="font-size: 35px; vertical-align: -5px; font-weight: 900;">north_west</i> Back to Launchpad</a></div>
         </center>
     </body>
 </html>
